Discarded the old javascript code and refactored it completely, one major change is that separation of functions for modularity

--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <link rel="stylesheet" href="src/style.css"></link>
-  
-  <title>Frontend Mentor | Browser extensions manager UI</title>
-</head>
-<body>
-  <header>
-      <img src="./assets/images/logo.svg" alt="extension-app--logo" id="logo">
-      <button id="toggle-theme">
-        <img src="./assets/images/icon-moon.svg" alt="sun" id="theme-icon">
-      </button>
-  </header>
-  
-  <section class="nav-section">
-    <h3>
-      Extensions List
-    </h3>
-    <nav>
-      <a href="#" class="focus" id="all">All</a>
-      <a href="#" id="active">Active</a>
-      <a href="#" id="inactive">Inactive</a>
-    </nav>
-  </section>
-  <main>
-    
-  </main>
-  
-  <script src="src/app.js"></script>
-</body>
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="./assets/images/favicon-32x32.png"
+        />
+
+        <link rel="stylesheet" href="src/style.css" />
+
+        <title>Frontend Mentor | Browser extensions manager UI</title>
+    </head>
+    <body>
+        <header>
+            <img
+                src="./assets/images/logo.svg"
+                alt="extension-app--logo"
+                id="logo"
+            />
+            <button id="toggle-theme">
+                <img src="./assets/images/icon-moon.svg" id="theme-icon" />
+            </button>
+        </header>
+
+        <section class="nav-section">
+            <h3>Extensions List</h3>
+            <nav>
+                <a href="#" id="all">All</a>
+                <a href="#" id="active">Active</a>
+                <a href="#" id="inactive">Inactive</a>
+            </nav>
+        </section>
+        <main></main>
+
+        <script src="src/test.js"></script>
+    </body>
 </html>
