Logic for toggling the active state of the nav links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="nav-section">
             <h3>Extensions List</h3>
             <nav>
-                <a href="#" id="all">All</a>
+                <a href="#" id="all" class="focus">All</a>
                 <a href="#" id="active">Active</a>
                 <a href="#" id="inactive">Inactive</a>
             </nav>
