Shipped a buggy nav link animation

--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
                 <a href="#" id="all" class="focus">All</a>
                 <a href="#" id="active">Active</a>
                 <a href="#" id="inactive">Inactive</a>
+                <div class="indicator"></div>
             </nav>
         </section>
         <main></main>
 
-        <script src="src/test.js"></script>
+        <script src="src/app.js"></script>
     </body>
 </html>
