--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
                 <a href="#" id="all" class="focus">All</a>
                 <a href="#" id="active">Active</a>
                 <a href="#" id="inactive">Inactive</a>
-                <div class="indicator"></div>
+                <div id="indicator"></div>
             </nav>
         </section>
         <main></main>
 
-        <script src="src/app.js"></script>
+        <script type="module" src="/src/app.js"></script>
     </body>
 </html>
