Fixed vite issue of habdling static assets

--- a/index.html
+++ b/index.html
@@ -17,13 +17,9 @@
     </head>
     <body>
         <header>
-            <img
-                src="./assets/images/logo.svg"
-                alt="extension-app--logo"
-                id="logo"
-            />
+            <img src="/images/logo.svg" alt="extension-app--logo" id="logo" />
             <button id="toggle-theme">
-                <img src="./assets/images/icon-moon.svg" id="theme-icon" />
+                <img src="/images/icon-moon.svg" id="theme-icon" />
             </button>
         </header>
 
