Fixed style conflicting issue that was causing the layout to be ugly at large screens

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <img src="/images/logo.svg" alt="extension-app--logo" id="logo" />
+            <img src="/images/logo.svg" alt="app-logo" id="logo" />
             <button id="toggle-theme">
                 <img src="/images/icon-moon.svg" id="theme-icon" />
             </button>
@@ -32,6 +32,7 @@
                 <div id="indicator"></div>
             </nav>
         </section>
+        
         <main></main>
 
         <script type="module" src="/src/app.js"></script>
